<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromUnitLBL"
        android:textSize="20sp" />
    
	<EditText
	    android:id="@+id/fromUnit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:hint="@string/fromUnit"
	    android:inputType="textCapCharacters"
	    android:textAllCaps="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toUnitLBL"
        android:textSize="20sp" />
    
	<EditText
	    android:id="@+id/toUnit"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:hint="@string/toUnit"
	    android:inputType="textCapCharacters"
	    android:textAllCaps="true" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/valueUnitLBL"
	    android:textSize="20sp" />
    
	<EditText
	    android:id="@+id/value"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_weight="0"
	    android:hint="@string/valueUnit"
	    android:inputType="numberDecimal" />

	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="sendMessage"
	    android:text="@string/button_send" />

	<ListView
	    android:id="@+id/listView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:choiceMode="singleChoice"
	    android:clickable="true"
	    android:entries="@array/allowedConvert" >

	</ListView>
    
</LinearLayout>
